<resources>
    <string name="app_name">EmployeeAttendance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_proceed"><![CDATA[Save & Proceed]]></string>
    <string name="question_mark"><![CDATA[\?]]></string>
    <string name="register_new_user">Register New User</string>
    <string name="check_in_checkout">Check In / Checkout</string>
    <string name="log_in_edit"><![CDATA[Log in & edit]]></string>
    <string name="modify_delete_user">Modify / Delete User</string>
    <string name="attendance_log">Attendance Log</string>
    <string name="check_in">CHECK IN</string>
    <string name="check_out">CHECK OUT</string>
    <string name="_123456789">123456789</string>
    <string name="passwordhint">**********</string>
    <string name="name">Name</string>
    <string name="mode">Mode</string>
    <string name="time">Time</string>
    <string name="todo">TODO</string>
    <string name="what_is_the">What is the\u0020</string>
    <string name="of_the_employee">\u0020of the Employee?</string>
    <string name="date">Date</string>
    <string name="john_doe">John Doe</string>
    <string name="of_birth">\u0020of Birth</string>
    <string name="_01_01_1990">01/01/1990</string>
    <string name="edit">Edit\u0020</string>
    <string name="password">Password</string>
    <string name="password_should_be_atleast_6_characters_long">Password should be atleast 6 characters long</string>
    <string name="edit_">Edit\u0020</string>
    <string name="phone_number">Phone Number</string>
    <string name="what_is_the_employee_s">What is the Employee\'s\u0020</string>
    <string name="email_address">Email Address</string>
    <string name="john_xyz_co">john@xyz.co</string>
    <string name="delete">Delete</string>
    <string name="_1234567890">1234567890</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="enter">Enter\u0020</string>
    <string name="employee_code">Employee Code</string>
    <string name="pick_a">Pick a\u0020</string>
</resources>
